fix collapse, font size is not responsive yet

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10119,9 +10119,7 @@ p.lead {
   }
 }
 
-body{
-  font-size:1.5rem;
-}
+
 .social-icons .social-icon {
   display: inline-flex;
   align-items: center;
